# 0.00.55 (66877) Aug 13, 2012
Resize time control panel when in manual mode
The handle arrows are now clickable and can control the animation
Handle arrows' vertical angles match the local earth curvature
Handle arrows moved closer to the handle itself
Flipped label light/dark for the "Both" coloring mode
Refined the time control panel (will now disable controls once the time limit is reached)
Fixed crash behavior with the Density Meter
# 0.00.54 (66778) Aug 9, 2012
# 0.00.53 (66755) Aug 9, 2012
Allowing software fallback (no debug flag)
# 0.00.52 (66753) Aug 9, 2012
Allowing software fallback + debug flag
# 0.00.51 (66752) Aug 9, 2012
Back to normal graphics settings
# 0.00.50 (66751) Aug 9, 2012
Debugging version without antialiasing and with reduced depth buffer precision
# 0.00.49 (66750) Aug 9, 2012
Debugging version without antialiasing
# 0.00.48 (66746) Aug 9, 2012
Multiple bug fixes (crashing and/or slowness)
# 0.00.47 (65618) Jul 2, 2012
Fixed tool drag areas and drag handling
Fixed garbled layout when launched with small screen-sizes.
# 0.00.46 (65470) Jun 27, 2012
Lithosphere-Aesthenosphere boundary linked in the middle and handled for the subduction case (and disappears in most other cases)
Moved "full density meter" icon arrow to the right.
# 0.00.45 (65376) Jun 21, 2012
# 0.00.44 (65375) Jun 21, 2012
# 0.00.43 (65372) Jun 21, 2012
Tools are moved back into the toolbox when they are not visible on the screen after zooming in
Added density-sensor dial "highlight" band
# 0.00.42 (64996) Jun 12, 2012
Added inertia to the dial for the "single-dial" density meter
Dials swapped for the two-dial density meter
Added developer option to switch between both types of density meters
Increased label font sizes
# 0.00.41 (64769) Jun 7, 2012
"Young Oceanic Crust" label appears in continental divergence case when there is room
Fixed boundary-label overlay over subducting crust (or other intersection issues)
Mantle label pushed down in continental collision cases